--- a/src/astaroth/Makefile
+++ b/src/astaroth/Makefile
@@ -102,6 +102,7 @@ endif
 ELIMINATE_CONDITIONALS   ?= $(TRANSPILATION)
 CPU_BUILD                ?= off
 OPTIMIZE_INPUT_PARAMS    ?= on
+USE_ONLY_OPTIMIZED_KERNELS ?= on
 
 ifeq ($(RUNTIME_COMPILATION),on) 
 	CMAKE_BUILD_TYPE ?= RelWithDebInfo
@@ -140,7 +141,7 @@ astaroth_$(PREC).so: $(SOURCES) forcing.h $(AC_HEADERS) $(PC_HEADERS) $(CHEADERS
 
 CMAKE_OPTIONS = -DCPU_BUILD=$(CPU_BUILD) -DFFT_ENABLED=ON -DMULTIGPU_ENABLED=OFF -DMPI_ENABLED=$(CMAKE_MPI) -DBUILD_SHARED_LIBS=ON -DSINGLEPASS_INTEGRATION=$(CMAKE_SINGLEPASS) -DMAX_THREADS_PER_BLOCK=512 \
                 -DPACKED_DATA_TRANSFERS=$(CMAKE_PACKED) -DDOUBLE_PRECISION=$(CMAKE_PREC) -DBUILD_SAMPLES=OFF -DSUPPRESS_COMPILER_WARNINGS=$(SUPPRESS_COMPILER_WARNINGS) \
-		-DVERBOSE=off -DOPTIMIZE_INPUT_PARAMS=$(OPTIMIZE_INPUT_PARAMS) -DOPTIMIZE_MEM_ACCESSES=ON -DOPTIMIZE_ARRAYS=$(FULL_DSL_OPTIMIZATIONS) -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) \
+		-DVERBOSE=off -DUSE_ONLY_OPTIMIZED_KERNELS=$(USE_ONLY_OPTIMIZED_KERNELS) -DOPTIMIZE_INPUT_PARAMS=$(OPTIMIZE_INPUT_PARAMS) -DOPTIMIZE_MEM_ACCESSES=ON -DOPTIMIZE_ARRAYS=$(FULL_DSL_OPTIMIZATIONS) -DCMAKE_BUILD_TYPE=$(CMAKE_BUILD_TYPE) \
 	        -DBUILD_STANDALONE=OFF -DOPTIMIZE_FIELDS=$(TRANSPILATION) -DALLOW_DEAD_VARIABLES=$(FULL_DSL_OPTIMIZATIONS) -DBUILD_UTILS=OFF \
 		-DCMAKE_POSITION_INDEPENDENT_CODE=ON -DELIMINATE_CONDITIONALS=$(ELIMINATE_CONDITIONALS) -DDSL_MODULE_FILE=$(DSL_MODULE_FILE) -DINLINING=$(INLINING) -DBUILD_ACM=OFF -DPROFILING_ENABLED=OFF
 endif
