implicit diffusion update via fft passes with damped_alfven_waves sample. TODO: test could we use other ways to do the implicit diffusion step like implicit Euler with Conjugate Gradients so we would not have to use FFTs

--- a/src/astaroth/DSL/solve_two.ac
+++ b/src/astaroth/DSL/solve_two.ac
@@ -67,7 +67,7 @@ fixed_boundary Kernel twopass_solve_final(PC_SUB_STEP_NUMBER step_num, real dt)
 	        write(F_SIGMA,rk_final(F_SIGMA,step_num,dt))
 #endif
 #if LDISP_CURRENT
-		if(AC_iex__mod__disp_current != 0) write(F_EVEC,rk_final(F_EVEC,step_num,dt))
+		if(AC_iex__mod__cdata != 0) write(F_EVEC,rk_final(F_EVEC,step_num,dt))
 		if(AC_igamma__mod__disp_current != 0) write(F_GAMMA,rk_final(F_GAMMA,step_num,dt))
 #endif
 #if LAXIONSU2BACK
