gitignore: use ** to simplify ignoring files in samples/
This is supported since git 1.8.2 (released in 2013). 13 years later, we
might as well use this option.

--- a/.gitignore
+++ b/.gitignore
@@ -19,62 +19,27 @@ revision.txt
 pc_build_tmp_*
 /pencil-auto-test-*.pid
 #
-# first directory level
-samples/*/src/*
-!samples/*/src/*.local
-!samples/*/src/astaroth
-samples/*/src/astaroth/*
-!samples/*/src/astaroth/DSL
-samples/*/src/astaroth/DSL/*
-!samples/*/src/astaroth/DSL/local
-samples/*/*.csh
-samples/*/*.log
-samples/*/Makefile
-samples/*/.pc_build_history
-samples/*/COMPLETED
-samples/*/ERROR
-samples/*/FIRST_FAILED
-samples/*/KEEP_RELOADING
-samples/*/LAST_SUCCEEDED
-samples/*/pc
-samples/*/reference_link.txt
-samples/*/runtime
-samples/*/fort.*
-samples/*/data
-#
-# second directory level
-samples/*/*/src/*
-!samples/*/*/src/*.local
-samples/*/*/*.csh
-samples/*/*/*.log
-samples/*/*/Makefile
-samples/*/*/.pc_build_history
-samples/*/*/COMPLETED
-samples/*/*/ERROR
-samples/*/*/FIRST_FAILED
-samples/*/*/KEEP_RELOADING
-samples/*/*/LAST_SUCCEEDED
-samples/*/*/pc
-samples/*/*/runtime
-samples/*/*/fort.*
-samples/*/*/data
-#
-# third directory level
-samples/*/*/*/src/*
-!samples/*/*/*/src/*.local
-samples/*/*/*/*.csh
-samples/*/*/*/*.log
-samples/*/*/*/Makefile
-samples/*/*/*/.pc_build_history
-samples/*/*/*/COMPLETED
-samples/*/*/*/ERROR
-samples/*/*/*/FIRST_FAILED
-samples/*/*/*/KEEP_RELOADING
-samples/*/*/*/LAST_SUCCEEDED
-samples/*/*/*/pc
-samples/*/*/*/runtime
-samples/*/*/*/fort.*
-samples/*/*/*/data
+samples/**/src/*
+!samples/**/src/*.local
+!samples/**/src/astaroth
+samples/**/src/astaroth/*
+!samples/**/src/astaroth/DSL
+samples/**/src/astaroth/DSL/*
+!samples/**/src/astaroth/DSL/local
+samples/**/*.csh
+samples/**/*.log
+samples/**/Makefile
+samples/**/.pc_build_history
+samples/**/COMPLETED
+samples/**/ERROR
+samples/**/FIRST_FAILED
+samples/**/KEEP_RELOADING
+samples/**/LAST_SUCCEEDED
+samples/**/pc
+samples/**/reference_link.txt
+samples/**/runtime
+samples/**/fort.*
+samples/**/data
 #
 # exceptions for individual samples
 samples/corona/driver
