gitignore: add reference_link.txt.tmp
Matthias, reference_link.txt.tmp looks like a temporary file of some
sort. Should it be cleaned up once reference_link.txt has been
generated?

--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@ samples/**/KEEP_RELOADING
 samples/**/LAST_SUCCEEDED
 samples/**/pc
 samples/**/reference_link.txt
+samples/**/reference_link.txt.tmp
 samples/**/runtime
 samples/**/fort.*
 samples/**/data
