python/tests/tox.ini: store repeated options in a variable

--- a/python/tests/tox.ini
+++ b/python/tests/tox.ini
@@ -8,6 +8,8 @@ env_list =
     with_mpi4py
     full
 
+pytest_options = -x
+
 [testenv]
 deps =
     numpy
@@ -19,7 +21,7 @@ deps =
     pytest
     decorator
 
-commands = pytest -x -m "not integration"
+commands = pytest -m "not integration" {[tox]pytest_options}
 
 [testenv:with_mpi4py]
 deps =
@@ -34,4 +36,4 @@ deps =
     decorator
 
 [testenv:full]
-commands = pytest -x
+commands = pytest {[tox]pytest_options}
