python/tests/tox.ini: add code coverage report generation

--- a/python/tests/tox.ini
+++ b/python/tests/tox.ini
@@ -7,8 +7,12 @@ env_list =
     py3.13
     with_mpi4py
     full
+    #Make sure the above are also present in [testenv:report]/depends
+    #following are for coverage report generation
+    clean
+    report
 
-pytest_options = -x
+pytest_options = -x --cov=pencil --cov-report= --cov-context=test --cov-append
 
 [testenv]
 deps =
@@ -20,8 +24,11 @@ deps =
     pexpect
     pytest
     decorator
+    pytest-cov
 
 commands = pytest -m "not integration" {[tox]pytest_options}
+
+depends = clean
 
 [testenv:with_mpi4py]
 deps =
@@ -34,6 +41,31 @@ deps =
     pytest
     mpi4py
     decorator
+    pytest-cov
 
 [testenv:full]
 commands = pytest {[tox]pytest_options}
+
+[testenv:clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
+; RHS of the following is intentionally empty
+depends = 
+
+[testenv:report]
+deps = coverage
+skip_install = true
+
+commands =
+    coverage report
+    coverage html
+
+depends =
+    py3.9
+    py3.10
+    py3.11
+    py3.12
+    py3.13
+    with_mpi4py
+    full
