python/tests/tox.ini: comment

--- a/python/tests/tox.ini
+++ b/python/tests/tox.ini
@@ -12,6 +12,7 @@ env_list =
     clean
     report
 
+; variables used to simplify the configuration (not directly used by tox)
 pytest_options = -x --cov=pencil --cov-report= --cov-context=test --cov-append
 
 [testenv]
