--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ addons:
     update: false
 
 before_install:
-  - sudo apt-get install -y gfortran libhdf5-openmpi-dev git-restore-mtime
+  - sudo apt-get install -y gfortran libhdf5-openmpi-dev git-restore-mtime libblas-dev liblapack-dev
   - gfortran --version
   - cd $HOME/build/pencil-code/pencil-code/ && git restore-mtime src/
 
