Python: tox.ini: update dependencies

--- a/python/tests/tox.ini
+++ b/python/tests/tox.ini
@@ -25,6 +25,7 @@ deps =
     pexpect
     pytest
     decorator
+    lazy-loader
     pytest-cov
 
 commands = pytest -m "not integration" {[tox]pytest_options}
@@ -42,6 +43,7 @@ deps =
     pytest
     mpi4py
     decorator
+    lazy-loader
     pytest-cov
 
 [testenv:full]
