add the options for flang on LUMI on comment to the general config

--- a/config/hosts/lumi/host-uan01-GNU_Linux.conf
+++ b/config/hosts/lumi/host-uan01-GNU_Linux.conf
@@ -66,6 +66,23 @@
 #	LDFLAGS += -ldl -lpthread -Wl,--no-relax
 #%endsection Makefile
 ####GNU end
+####For flang compiler uncomment below and comment alternative
+####Flang is needed if one uses HeFFTe
+#%include compilers/flang-MPI
+#%section Makefile
+#	# turn on software optimizations
+#	FC = ftn
+#	F90 = $(FC)
+#	CC = cc
+#	FFLAGS += -O0 -g
+#	FFLAGS += -fPIC
+#	#FFLAGS += -march=core-avx2
+#	CFLAGS += -O2 -D_GNU_SOURCE -fPIC
+#	GPU_FFT=HEFFTE
+#	ALLOW_ARG_MISMATCH=
+#	#CFLAGS += -march=core-avx2
+#	LDFLAGS += -ldl -lpthread -Wl,--no-relax
+#%endsection Makefile
 
 %section runtime
 	mpiexec = srun
