move pushpars of cdata to their own module away from run.f90 so modifications in run.f90 won't force a re-compilation of the Astaroth interface

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -914,6 +914,8 @@ GRID_SRC=$(GRID).f90
 #
 GPU_OBJ=$(GPU).o
 GPU_SRC=$(GPU).f90
+GLOBAL_PUSHPARS_OBJ=global_pushpars.o
+GLOBAL_PUSHPARS_SRC=global_pushpars.f90
 #
 GSL_OBJ=$(GSL).o
 GSL_SRC=$(GSL).c
@@ -3093,7 +3095,7 @@ start=$(technical) $(physics) $(GPU_OBJ) nogpu_astaroth_ansi.o $(TRAINING_OBJ)
 #
 #  Short hand notation for run.o dependencies.
 #
-run=$(technical) $(physics) $(GPU_OBJ) $(GPU_INTERFACE) $(TIMESTEP_OBJ) $(TRAINING_OBJ) equ.o pencil_check.o
+run=$(technical) $(physics) $(GPU_OBJ) $(GPU_INTERFACE) $(TIMESTEP_OBJ) $(TRAINING_OBJ) equ.o pencil_check.o $(GLOBAL_PUSHPARS_OBJ)
 #
 #  Rules for compiling start.o, start.x, run.o, run.x.
 #
@@ -3244,7 +3246,7 @@ ifeq ($(ENERGY),noentropy)
 endif
 	@grep '[a-zA-Z_]*eos.*f90' $(CUDA_MAKEDIR)/PC_modulesources.h > /dev/null || echo \#define L$(EOS)_MODULE 1 >> $(CUDA_MAKEDIR)/PC_moduleflags.h
 	@grep '[a-zA-Z_]*eos.*f90' $(CUDA_MAKEDIR)/PC_modulesources.h > /dev/null || echo $(CUDA_RELPATH)'/$(EOS).f90 \' >> $(CUDA_MAKEDIR)/PC_modulesources.h
-	@echo $(CUDA_RELPATH)'/run.f90' >> $(CUDA_MAKEDIR)/PC_modulesources.h
+	@echo $(CUDA_RELPATH)'/global_pushpars.f90' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 	@echo ' ' >> $(CUDA_MAKEDIR)/PC_modulesources.h
 	@sed -e'1 i TRANSPILATION='$(TRANSPILATION) -i $(CUDA_MAKEDIR)/PC_modulesources.h
 	@sed -e'1 i RUNTIME_COMPILATION='$(RUNTIME_COMPILATION) -i $(CUDA_MAKEDIR)/PC_modulesources.h
