--- a/src/Makefile.depend
+++ b/src/Makefile.depend
@@ -339,6 +339,7 @@ noyinyang.o: yinyang.h noyinyang.f90 $(CPARAM_OBJ) $(CDATA_OBJ) $(GENERAL_OBJ)
 noyinyang_mpi.o: yinyang_mpi.h noyinyang_mpi.f90 $(CPARAM_OBJ) $(GENERAL_OBJ) $(MPICOMM_OBJ)
 #
 $(GPU_OBJ): $(GPU_INTERFACE) gpu.h $(GPU_SRC) $(CPARAM_OBJ) $(CDATA_OBJ) $(GENERAL_OBJ) $(MPICOMM_OBJ) $(MESSAGES_OBJ) $(FILE_IO_OBJ)
+$(GLOBAL_PUSHPARS_OBJ): $(GLOBAL_PUSHPARS_SRC) $(GENERAL_OBJ) $(SYSCALLS_OBJ) $(FARRAY_OBJ) $(CDATA_OBJ) $(CPARAM_OBJ)
 #
 nogpu.o: gpu.h nogpu.f90 $(GENERAL_OBJ)
 #
