--- a/python/tests/tox.ini
+++ b/python/tests/tox.ini
@@ -7,13 +7,6 @@ env_list =
     py3.14
     with_mpi4py
     full
-    #Make sure the above are also present in [testenv:report]/depends
-    #following are for coverage report generation
-    clean
-    report
-
-; variables used to simplify the configuration (not directly used by tox)
-pytest_options = -x --cov=pencil --cov-report= --cov-context=test --cov-append
 
 [testenv]
 deps =
@@ -28,7 +21,7 @@ deps =
     lazy-loader
     pytest-cov
 
-commands = pytest -m "not integration" {[tox]pytest_options}
+commands = pytest -m "not integration" {posargs}
 
 depends = clean
 
@@ -47,27 +40,4 @@ deps =
     pytest-cov
 
 [testenv:full]
-commands = pytest {[tox]pytest_options}
-
-[testenv:clean]
-deps = coverage
-skip_install = true
-commands = coverage erase
-; RHS of the following is intentionally empty
-depends = 
-
-[testenv:report]
-deps = coverage
-skip_install = true
-
-commands =
-    coverage html
-
-depends =
-    py3.10
-    py3.11
-    py3.12
-    py3.13
-    py3.14
-    with_mpi4py
-    full
+commands = pytest {posargs}
