Makefile.src: change ?= to +=
The user may have explicitly specified these variables, and it seems to
make sense to append in those cases.

--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -201,8 +201,9 @@ endif
 #
 # Default linker flags for shared libraries.
 #
-DLL_FFLAGS ?= -fPIC
-DLL_LDFLAGS ?= -shared
+# 10-Dec-2025/Kishore: changed from ?= to +=
+DLL_FFLAGS += -fPIC
+DLL_LDFLAGS += -shared
 #
 # useful shortcuts
 #
