--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -3152,8 +3152,14 @@ ifeq ($(GPU),gpu_astaroth)
 special.so: $(CPARAM_OBJ) $(CDATA_OBJ) $(SPECIAL_OBJ) special_dummies.inc $(SPECIAL_MODULES:=.o)
 	$(LD) $(SPECIAL_MODULES:=.o) $(DLL_LDFLAGS) -o special.so
 else
+.ONESHELL:
 special.so: $(CPARAM_OBJ) $(CDATA_OBJ) $(SPECIAL_OBJ) special_dummies.inc $(SPECIAL_MODULES:=.o)
-	$(LD) $(SPECIAL_MODULES:=.o) $(DLL_LDFLAGS) -o special.so; pc_mkspecial.sh "$(SPECIAL_MODULES:=.f90)"
+	# pc_mkspecial should run regardless of whether ld succeeds; if ld fails,
+	# we want make to fail AFTER running pc_mkspecial
+	$(LD) $(SPECIAL_MODULES:=.o) $(DLL_LDFLAGS) -o special.so
+	ld_status=$$?
+	pc_mkspecial.sh "$(SPECIAL_MODULES:=.f90)"
+	exit $$ld_status
 endif
 #
 #  comment out the 3 lines ifneq, @, endif below if one gets an error message
