--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -201,9 +201,9 @@ endif
 #
 # Default linker flags for shared libraries.
 #
-# 10-Dec-2025/Kishore: changed from ?= to +=
-DLL_FFLAGS += -fPIC
-DLL_LDFLAGS += -shared
+DLL_FFLAGS = -fPIC
+DLL_LDFLAGS = -shared
+#
 #
 # useful shortcuts
 #
