current version; message generated automatically on: Linux nl6 (brandenb)

--- a/samples/1d-tests/sine-Gordon/src/Makefile.local
+++ b/samples/1d-tests/sine-Gordon/src/Makefile.local
@@ -12,15 +12,6 @@ VISCOSITY=noviscosity
 HYDRO=nohydro
 EOS=noeos
 DENSITY=nodensity
-#FOURIER=fourier_fftpack
-#POWER=power_spectrum
-#SPECIAL = special/lorentz_gauge
-#SPECIAL = special/disp_current
-#SPECIAL = special/backreact_infl special/disp_current special/lorentz_gauge
-#SPECIAL = special/backreact_infl special/disp_current special/gravitational_waves_hTXk
 SPECIAL = special/klein_gordon
-#SPECIAL = special/chiral_mhd special/gravitational_waves_hTXk
-#SPECIAL =  special/backreact_infl special/gravitational_waves_hTXk
-#SPECIAL =  special/gravitational_waves_hTXk
-#SPECIAL = special/lorentz_gauge
-REAL_PRECISION=double
+#REAL_PRECISION=double
+DERIV=deriv_10th
