--- a/samples/1d-tests/sine-Gordon/run.in
+++ b/samples/1d-tests/sine-Gordon/run.in
@@ -4,13 +4,13 @@
 !
 &run_pars
   cvsid='$Id: run.in,v 1.3 2024/05/11 11:52:38 brandenb Exp $'
-  nt=20000, it1=1000, isave=50, itorder=3
-  nt=50, it1=5, isave=50, itorder=3
-  dsnap=5e-1, dvid=5e-2, tmax=7e8 !, dtmin=-1e-12
+  nt=500, it1=5, isave=50, itorder=3
+  dsnap=5e-1, dvid=5e-2
   lwrite_aux=T
   lpencil_check=F
   lpencil_check_small=F
-  dt=.1
+  dt=.1   !(speed: 0.89006673)
+  dt=.02  !(speed: 0.89451932)
 /
 &special_run_pars
   Vprime_choice='cos-profile', phimass=2., lambda_phi=1.
