--- a/src/Makefile.src
+++ b/src/Makefile.src
@@ -1766,8 +1766,10 @@ YINYANG_MPI_SRC=$(YINYANG_MPI).f90
 #FFLAGS= -O0 -finit-real=sNaN -fbacktrace -g -fcheck=all -ffpe-trap=invalid,zero,overflow #(nl6)
 #FFLAGS= -O0 #(nl6)
 #FFLAGS= -O0 -llapack #(nl6)
-#FFLAGS= -O0 -finit-real=sNaN -fbacktrace -g -fcheck=all -ffpe-trap=invalid,zero,overflow -llapack #(nl6)
-#FFLAGS_DOUBLE=-fdefault-real-8  #(nl6)
+#FFLAGS= -O0 -finit-real=sNaN -fbacktrace -g -fcheck=all -ffpe-trap=invalid,zero,overflow #(nl6)
+#FFLAGS= -O0 -fbacktrace -g #(nl6)
+#FFLAGS_DOUBLE=-fdefault-real-8 #(nl6)
+#FFLAGS_DOUBLE=-fdefault-real-8 -fdefault-double-8  #(nl6)
 ##FFLAGS=-O0 -finit-real=NaN #(nl6)
 #CC=gcc #(nl6)
 #CFLAGS=-O3 -DFUNDERSC=1 #(nl6)
