--- a/samples/2d-tests/dark-matter/src/Makefile.local
+++ b/samples/2d-tests/dark-matter/src/Makefile.local
@@ -24,6 +24,7 @@ PARTICLES             =   particles_dust
 PARTICLES_SELFGRAVITY =   particles_selfgravity
 
 FOURIER      =   fourier_fftpack
+POWER        = power_spectrum
 
 # Use double precision
 REAL_PRECISION = double
