--- a/.gitignore
+++ b/.gitignore
@@ -520,3 +520,25 @@ doc/readthedocs/pencil-docker/.env
 !samples/1d-tests/sine-Gordon/idl/.run_directories.log
 !samples/1d-tests/sine-Gordon/idl/pc_build_tmp_*
 !samples/1d-tests/sine-Gordon/idl/.pc_build_history
+!samples/0d-tests/reionization-saha/src/.DS_Store
+!samples/0d-tests/reionization-saha/src/*.directory
+!samples/0d-tests/reionization-saha/src/*.pyc
+!samples/0d-tests/reionization-saha/src/*~
+!samples/0d-tests/reionization-saha/src/.*.swp
+!samples/0d-tests/reionization-saha/src/host-ID
+!samples/0d-tests/reionization-saha/src/revision.txt
+!samples/0d-tests/reionization-saha/src/*-eps-converted-to.pdf
+!samples/0d-tests/reionization-saha/src/.run_directories.log
+!samples/0d-tests/reionization-saha/src/pc_build_tmp_*
+!samples/0d-tests/reionization-saha/src/.pc_build_history
+!samples/0d-tests/reionization-saha/.DS_Store
+!samples/0d-tests/reionization-saha/*.directory
+!samples/0d-tests/reionization-saha/*.pyc
+!samples/0d-tests/reionization-saha/*~
+!samples/0d-tests/reionization-saha/.*.swp
+!samples/0d-tests/reionization-saha/host-ID
+!samples/0d-tests/reionization-saha/revision.txt
+!samples/0d-tests/reionization-saha/*-eps-converted-to.pdf
+!samples/0d-tests/reionization-saha/.run_directories.log
+!samples/0d-tests/reionization-saha/pc_build_tmp_*
+!samples/0d-tests/reionization-saha/.pc_build_history
