--- a/samples/training/TG-VORTEXh5/training/run.in
+++ b/samples/training/TG-VORTEXh5/training/run.in
@@ -4,11 +4,11 @@
 !
 &run_pars
   cvsid="c2196e6f1"
-  nt=10000, it1=50, isave=4000, itorder=3
+  nt=1300, it1=50, isave=4000, itorder=3
   !dvid=1e-4
   !slice_position='m'
   max_walltime= 41500 ! 12 h !
-  cdt=0.05
+  cdt=0.25
 	#dt=1e-4
 dtmin=1e-16
  tmax=700.
@@ -40,13 +40,14 @@ dtmin=1e-16
 /
 &training_run_pars
   lroute_via_cpu=F
-  !it_train=10, it_train_chkpt=5000
+  !it_train=10, it_train_end=3000 it_train_chkpt=5000
 	it_train_chkpt=5000
   luse_trained_tau=F
   max_loss=1.e-30
   model='stationary'
 	config_file='config_torchfort.yaml'
-	it_train_end=3000
 	lrun_epoch=T
-	dt_train=4.e-2
+	dt_train=5.6e-3
+	t_train_end=100
+	t_train_chkpt=2.e-1
 /
