added dark-matter folder

--- a/.gitattributes
+++ b/.gitattributes
@@ -689,6 +689,7 @@ doc/implementation/correlation_time_uut/fig/pcortime.pdf -text
 doc/implementation/correlation_time_uut/notes.pdf -text
 doc/implementation/correlation_time_uut/notes.tex -text
 doc/implementation/correlation_time_uut/ts.pdf -text
+doc/implementation/dark-matter/README -text
 doc/implementation/displacement/Makefile -text
 doc/implementation/displacement/notes.pdf -text
 doc/implementation/displacement/notes.tex -text
