--- a/doc/.gitignore
+++ b/doc/.gitignore
@@ -148,3 +148,44 @@ inlinedoc-*.tex
 !HDF5/*.vind
 !HDF5/*-eps-converted-to.pdf
 !HDF5/inlinedoc-*.tex
+!implementation/dark-matter/.DS_Store
+!implementation/dark-matter/*.directory
+!implementation/dark-matter/*.pyc
+!implementation/dark-matter/*~
+!implementation/dark-matter/.*.swp
+!implementation/dark-matter/host-ID
+!implementation/dark-matter/revision.txt
+!implementation/dark-matter/.pc_build_history
+!implementation/dark-matter/.run_directories.log
+!implementation/dark-matter/pc_build_tmp_*
+!implementation/dark-matter/website
+!implementation/dark-matter/html
+!implementation/dark-matter/driver_switch.tex
+!implementation/dark-matter/manual.aux
+!implementation/dark-matter/manual.dvi
+!implementation/dark-matter/manual.fidx
+!implementation/dark-matter/manual.find
+!implementation/dark-matter/manual.idx
+!implementation/dark-matter/manual.ilg
+!implementation/dark-matter/manual.ind
+!implementation/dark-matter/manual.log
+!implementation/dark-matter/manual.out
+!implementation/dark-matter/manual.pdf
+!implementation/dark-matter/manual.ps
+!implementation/dark-matter/manual.ps.gz
+!implementation/dark-matter/manual.toc
+!implementation/dark-matter/manual.vidx
+!implementation/dark-matter/manual.vind
+!implementation/dark-matter/*.aux
+!implementation/dark-matter/*.fidx
+!implementation/dark-matter/*.find
+!implementation/dark-matter/*.idx
+!implementation/dark-matter/*.ilg
+!implementation/dark-matter/*.ind
+!implementation/dark-matter/*.log
+!implementation/dark-matter/*.out
+!implementation/dark-matter/*.toc
+!implementation/dark-matter/*.vidx
+!implementation/dark-matter/*.vind
+!implementation/dark-matter/*-eps-converted-to.pdf
+!implementation/dark-matter/inlinedoc-*.tex
