--- a/.gitignore
+++ b/.gitignore
@@ -542,3 +542,25 @@ doc/readthedocs/pencil-docker/.env
 !samples/0d-tests/reionization-saha/.run_directories.log
 !samples/0d-tests/reionization-saha/pc_build_tmp_*
 !samples/0d-tests/reionization-saha/.pc_build_history
+!samples/decay-reconnection/src/.DS_Store
+!samples/decay-reconnection/src/*.directory
+!samples/decay-reconnection/src/*.pyc
+!samples/decay-reconnection/src/*~
+!samples/decay-reconnection/src/.*.swp
+!samples/decay-reconnection/src/host-ID
+!samples/decay-reconnection/src/revision.txt
+!samples/decay-reconnection/src/*-eps-converted-to.pdf
+!samples/decay-reconnection/src/.run_directories.log
+!samples/decay-reconnection/src/pc_build_tmp_*
+!samples/decay-reconnection/src/.pc_build_history
+!samples/decay-reconnection/.DS_Store
+!samples/decay-reconnection/*.directory
+!samples/decay-reconnection/*.pyc
+!samples/decay-reconnection/*~
+!samples/decay-reconnection/.*.swp
+!samples/decay-reconnection/host-ID
+!samples/decay-reconnection/revision.txt
+!samples/decay-reconnection/*-eps-converted-to.pdf
+!samples/decay-reconnection/.run_directories.log
+!samples/decay-reconnection/pc_build_tmp_*
+!samples/decay-reconnection/.pc_build_history
